2007-09-11  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG: Corrected enum field end location. 

2007-09-07  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG, Project/Src/Parser/CSharp/Parser.cs:
	  Worked on bug 82720: Null ref when autocomplete activated

2007-09-06  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG, Project/Src/Parser/gen.sh: Applied some
	  patches to the new NRefartory from the former monodevelop nrefactory
	  version.
	
	  Added a parser generation script for linux which can be used to generate
	  the parser out of the ATG files. The Parser.cs files should never be
	  patched directly.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com> 

	* Project/Src/Visitors/CodeDOMOutputVisitor.cs: Respect "partial" modifier
	  when building CodeDOM types.

2007-08-23  Mike Krüger <mkrueger@novell.com> 

	* NRefactory.mdp: Updated to the latest .NET 2.0 version.

2007-08-22  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: Fixed 82529:TaskList doesn't update
	  when using comments: /**/.

2007-07-24  Jeffrey Stedfast  <fejj@novell.com>

	Part of the fix for bug #82114.

	* Project/Src/Parser/AST/AbstractNode.cs (AddChild): Set the
	Parent.

	* Project/Src/Parser/CSharp/cs.ATG: Same fixes as below... just in
	case we ever re-autogenerate Parser.cs

	* Project/Src/Parser/CSharp/Parser.cs: Store the location of
	VariableDeclarations and TypeReferences. Also make sure to set the
	TypeReference on each VariableDeclaration.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, NRefactory.mdp: Disabled building through makefile. Set
	  target runtime to 2.0.

2007-02-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, NRefactory.mdp: Added MD project and synchronized it
	  with the makefile.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/Src/Parser/CSharp/Parser.cs: Store the location of field
	  reference expressions.
