@@ -1,3 +1,7 @@
+2007-09-12  Mike Krüger <mkrueger@novell.com> 
+
+	* Project/Src/Parser/CSharp/cs.ATG: Corrected some expression positions.
+
 2007-09-11  Mike Krüger <mkrueger@novell.com> 
 
 	* Project/Src/Parser/CSharp/cs.ATG: Corrected enum field end location. 
